logs/ska-encryption.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/ska'...
Compiling './lib/python3.5/site-packages/ska/aes.py'...
***   File "./lib/python3.5/site-packages/ska/aes.py", line 312
    print 'key_len = %d bit' % (len(key) * 8)
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ska/bf.py'...
***   File "./lib/python3.5/site-packages/ska/bf.py", line 508
    print qrepr(e), qrepr(ee), ok(e == ee)
              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ska/key.py'...
***   File "./lib/python3.5/site-packages/ska/key.py", line 58
    print qrepr(b), ok(a == b)
              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ska/mode.py'...
***   File "./lib/python3.5/site-packages/ska/mode.py", line 105
    print 'Test mode %s block size %d' % (mode_name, block_size)
                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ska/openssl.py'...
***   File "./lib/python3.5/site-packages/ska/openssl.py", line 180
    print pad(rem, 50), \
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ska/shortcuts.py'...
***   File "./lib/python3.5/site-packages/ska/shortcuts.py", line 172
    print pad(rem, 50), 'enc:', ok(c == ref_cryp), 'dec:', ok(t == text)
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ska_encryption-1.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
